feat(workflows): add excavator.yml

--- a/bin/lang/zh-CN.json
+++ b/bin/lang/zh-CN.json
@@ -7,6 +7,6 @@
         "软件原数据文件",
         "持久化数据文件"
     ],
-    "stop_process":"终止应用进程 -- ",
+    "stop_process":"尝试终止应用进程 -- ",
     "need_close":"{{$app_name}} 需要先手动关闭软件再进行卸载\n请在确认已经关闭了软件后按下 Enter 键继续进行卸载流程"
 }
