--- a/bin/lang/en-US.json
+++ b/bin/lang/en-US.json
@@ -7,6 +7,6 @@
         "Original File",
         "Persist  File"
     ],
-    "stop_process":"Stop Process -- ",
+    "stop_process":"Try to stop Process -- ",
     "need_close":"{{$app_name}} needs to be manually closed to uninstall\nPlease confirm that you have closed it and press Enter to continue"
 }
