--- a/bin/lang/zh-CN.json
+++ b/bin/lang/zh-CN.json
@@ -7,6 +7,12 @@
         "软件原数据文件",
         "持久化数据文件"
     ],
+    "persist_err": [
+        "这是一个应用清单的错误\n",
+        "函数(persist) 必须指定参数 -dir 或 -file\n",
+        "函数(persist)被终止了，scoop 内置的 persist 配置项不受影响(如果配置了)"
+    ],
+    "shortcut": "为程序 {{$app}} 创建快捷方式\n{{$lnk_path}}",
     "stop_process": "尝试终止可能存在的进程 -- ",
     "need_close": "{{$app_name}} 需要先手动关闭软件再进行卸载\n请在确认已经关闭了软件后按下 Enter 键继续进行卸载流程"
 }
