--- a/bin/lang/en-US.json
+++ b/bin/lang/en-US.json
@@ -8,21 +8,24 @@
         "Persist  File"
     ],
     "persist_err": [
-        "This is an error in the application manifest.\n",
+        "This is an error in the app manifest.\n",
         "The function (persist) must specify the parameter -dir or -file.\n",
         "The function (persist) has been terminated, and the built-in option(persist) in Scoop is not affected (if it's configured)"
     ],
-    "shortcut": "Creating shortcut for {{$app}}\n{{$lnk_path}}",
+    "shortcut": "Creating shortcut for {{$app}}\nPath: {{$lnk_path}}\n",
     "stop_process": "Try to stop possible Process -- ",
-    "need_close": "{{$app_name}} needs to be manually closed to uninstall\nPlease confirm that you have closed it and press Enter to continue",
+    "stop_explorer": "The uninstall process of this app requires closing all File Explorer(explorer.exe).\nPlease make sure that all your work in File Explorer has been completed and saved.\nPress Enter to continue",
+    "need_close": "{{$app_name}} needs to be manually closed to uninstall\nPlease confirm that you have closed it and press Enter to continue.",
     "download": {
         "exist": "The latest version({{$installed_version}}) of {{$app}} is already installed.",
         "no_aria2": "aria2 is not installed",
         "installing_aria2": "Installing aria2",
         "install_aria2_failed": "It's failed to install aria2. Please try again",
         "enable_aria2": "Enabling it --- aria2-enabled",
-        "cache":"There is the installation package for {{$app}} in the cache directory, and {{$app}} has been installed.\nIf you want to see the installation process, you can run the following command:\nscoop uninstall {{$app}}; scoop install {{$app}}",
+        "cache": "There is the installation package for {{$app}} in the cache directory, and {{$app}} has been installed.\nIf you want to see the installation process, you can run the following command:\nscoop uninstall {{$app}}; scoop install {{$app}}",
         "url": "Url: ",
         "download": "Please download manually.\nPlease enter the downloaded file path: "
-    }
+    },
+    "clean_redundant_files": "Run a background job: Delete redundant files generated during the installation process after {{$delay}} seconds\n",
+    "remove": "Removing "
 }
