--- a/bin/lang/en-US.json
+++ b/bin/lang/en-US.json
@@ -13,7 +13,7 @@
         "The function (persist) has been terminated, and the built-in option(persist) in Scoop is not affected (if it's configured)"
     ],
     "shortcut": "Creating shortcut for {{$app}}\nPath: {{$lnk_path}}\n",
-    "stop_process": "Try to stop possible Process -- ",
+    "stop_process": "Try to stop possible Process...",
     "stop_explorer": "The uninstall process of this app requires closing all File Explorer(explorer.exe).\nPlease make sure that all your work in File Explorer has been completed and saved.\nPress Enter to continue",
     "need_close": "{{$app_name}} needs to be manually closed to uninstall\nPlease confirm that you have closed it and press Enter to continue.",
     "download": {
@@ -22,7 +22,11 @@
         "installing_aria2": "Installing aria2",
         "install_aria2_failed": "It's failed to install aria2. Please try again",
         "enable_aria2": "Enabling it --- aria2-enabled",
-        "cache": "There is the installation package for {{$app}} in the cache directory, and {{$app}} has been installed.\nIf you want to see the installation process, you can run the following command:\nscoop uninstall {{$app}}; scoop install {{$app}}",
+        "check_cache": [
+            "Checking for the latest version of the installation package cache...",
+            "Cache found, installing...",
+            "Cache not found, continue with manual download:"
+        ],
         "url": "Url: ",
         "download": "Please download manually.\nPlease enter the downloaded file path: "
     },
