--- a/bin/lang/zh-CN.json
+++ b/bin/lang/zh-CN.json
@@ -13,7 +13,7 @@
         "函数(persist)被终止了，scoop 内置的 persist 配置项不受影响(如果配置了)"
     ],
     "shortcut": "为程序 {{$app}} 创建快捷方式\n路径: {{$lnk_path}}\n",
-    "stop_process": "尝试终止可能存在的进程 -- ",
+    "stop_process": "尝试终止可能仍在运行的进程...",
     "stop_explorer": "该应用的卸载需要关闭所有的文件资源管理器(explorer.exe)\n请确定你在文件资源管理器中的所有工作已经完成且已经保存\n按下 Enter(回车键)继续进行卸载流程",
     "need_close": "{{$app_name}} 需要先手动关闭软件再进行卸载\n请在确认已经关闭了软件后按下 Enter 键继续进行卸载流程",
     "download": {
@@ -22,7 +22,11 @@
         "installing_aria2": "正在安装 aria2",
         "install_aria2_failed": "aria2 安装失败，请重试",
         "enable_aria2": "正在启用 aria2",
-        "cache": "cache目录下有 {{$app}} 的安装包，现在 {{$app}} 已经安装完成\n如果你希望看到安装过程，你可以运行以下命令:\nscoop uninstall {{$app}}; scoop install {{$app}}",
+        "check_cache":[
+            "检查是否存在最新版的安装包缓存...",
+            "存在缓存，正在安装...",
+            "不存在缓存，进入手动下载流程:"
+        ],
         "url": "下载地址: ",
         "download": "请手动点击下载\n并将下载完成的文件路径复制到此处: "
     },
