feat(bin): update
- add sleep_install sleep_uninstall                                                │
- update download.ps1

--- a/bin/lang/en-US.json
+++ b/bin/lang/en-US.json
@@ -31,5 +31,6 @@
         "download": "Please download manually.\nPlease enter the downloaded file path: "
     },
     "clean_redundant_files": "Run a background job: Delete redundant files generated during the installation process after {{$delay}} seconds\n",
-    "remove": "Removing "
+    "remove": "Removing ",
+    "uninstalling": "Running the built-in uninstaller of this app..."
 }
