--- a/bin/lang/zh-CN.json
+++ b/bin/lang/zh-CN.json
@@ -1,5 +1,5 @@
 {
-    "less": "按下 Enter 键查看更多，按下其他任意键退出！(剩余 {{$lines}} 行)",
+    "less": "按下 Enter 键查看更多，按下其他任意键退出！(剩余 {{ $lines }} 行)",
     "persist_data": [
         "持久化数据(Persist Data)",
         "软件原数据目录",
@@ -12,22 +12,15 @@
         "函数(persist) 必须指定参数 -dir 或 -file\n",
         "函数(persist)被终止了，scoop 内置的 persist 配置项不受影响(如果配置了)"
     ],
-    "shortcut": "为程序 {{$app}} 创建快捷方式\n路径: {{$lnk_path}}\n如果你不需要桌面快捷方式，请运行以下命令:\nscoop config abgo_bucket_no_shortcut true\n",
+    "shortcut": "为程序 {{ $app[1] }} 创建快捷方式\n路径: {{ $lnk_path }}\n如果你不需要桌面快捷方式，请运行以下命令:\nscoop config abgo_bucket_no_shortcut true\n",
     "no_shortcut": "当前 Scoop 配置项 abgo_bucket_no_shortcut 的值为 true\n不会创建桌面快捷方式\n如果需要它，请运行以下命令:\nscoop config abgo_bucket_no_shortcut false\n",
     "stop_process": "尝试终止可能仍在运行的进程...",
     "download": {
-        "exist": "{{$app}} 已经安装了最新版本({{$installed_version}})",
-        "no_aria2": "aria2 还没有安装",
-        "installing_aria2": "正在安装 aria2",
-        "install_aria2_failed": "aria2 安装失败，请重试",
-        "enable_aria2": "正在启用 aria2",
-        "check_cache": [
-            "检查是否存在最新版的安装包缓存...",
-            "存在缓存，正在安装...",
-            "不存在缓存，进入手动下载流程:"
-        ],
+        "exist": "{{ $app[1] }} 已经安装了最新版本({{ $installed_version }})",
         "url": "下载地址: ",
-        "download": "请手动点击下载\n并将下载完成的文件路径复制到此处: "
+        "download": "请手动点击下载\n并将下载后的文件路径复制到此处: ",
+        "no_found": "你给出的路径无效，没有找到此文件，请重新输入!",
+        "no_found_app": "没有找到 {{ $app[1] }}，这个应用可能不存在，也可能是拼写错误"
     },
     "clean_redundant_files": "运行一个后台作业：删除安装过程中产生的冗余文件\n",
     "remove_app_lnk": "当前 Scoop 配置项 abgo_bucket_no_shortcut 的值为 true\n将运行一个后台任务监控安装程序是否创建桌面快捷方式，如果创建了将立即删除它\n如果需要桌面快捷方式，请运行以下命令:\nscoop config abgo_bucket_no_shortcut false\n",
