feat(bin): update

--- a/bin/lang/zh-CN.json
+++ b/bin/lang/zh-CN.json
@@ -1,5 +1,9 @@
 {
-    "less": "按下 Enter 键查看更多，按下其他任意键退出！(剩余 {{ $lines }} 行)",
+    "less": [
+        "<@Yellow>--------------------------------------------------\n",
+        "<@Cyan>按下 Enter 键查看更多，按下其他任意键退出！(剩余 <@Magenta>{{ $lines }}<@Cyan> 行)\n",
+        "<@Yellow>--------------------------------------------------<@Cyan>"
+    ],
     "persist_data": [
         "持久化数据(Persist Data)",
         "软件原数据目录",
@@ -12,19 +16,37 @@
         "函数(persist) 必须指定参数 -dir 或 -file\n",
         "函数(persist)被终止了，scoop 内置的 persist 配置项不受影响(如果配置了)"
     ],
-    "shortcut": "为程序 {{ $app[1] }} 创建快捷方式\n路径: {{ $lnk_path }}\n如果你不需要桌面快捷方式，请运行以下命令:\nscoop config abgo_bucket_no_shortcut true\n",
-    "no_shortcut": "当前 Scoop 配置项 abgo_bucket_no_shortcut 的值为 true\n不会创建桌面快捷方式\n如果需要它，请运行以下命令:\nscoop config abgo_bucket_no_shortcut false\n",
-    "stop_process": "尝试终止可能仍在运行的进程...",
+    "shortcut": [
+        "<@Green>为程序 <@Magenta>{{ $app }}<@Green> 创建快捷方式\n",
+        "路径: <@Blue>{{ $lnk_path }}<@Green>\n",
+        "如果你不需要桌面快捷方式，请运行以下命令:\n",
+        "<@Magenta>scoop config abgo_bucket_no_shortcut true\n"
+    ],
+    "no_shortcut": [
+        "<@Yellow>当前 Scoop 配置项 <@Magenta>abgo_bucket_no_shortcut<@Yellow> 的值为 <@Magenta>true<@Yellow>\n",
+        "不会创建桌面快捷方式\n",
+        "如果需要它，请运行以下命令:\n",
+        "<@Magenta>scoop config abgo_bucket_no_shortcut false\n"
+    ],
+    "stop_process": "<@Cyan>尝试终止可能仍在运行的进程...",
     "download": {
-        "exist": "{{ $app[1] }} 已经安装了最新版本({{ $installed_version }})",
-        "url": "下载地址: ",
+        "exist": "<@Magenta>{{ $app[1] }}<@Green> 已经安装了最新版本(<@Magenta>{{ $installed_version }}<@Green>)",
+        "url": "<@Green>下载地址: <@Blue>{{ $url }}",
         "download": "请手动点击下载\n并将下载后的文件路径复制到此处: ",
-        "no_found": "你给出的路径无效，没有找到此文件，请重新输入!",
-        "no_found_app": "没有找到 {{ $app[1] }}，这个应用可能不存在，也可能是拼写错误"
+        "no_found": "你给出的路径无效，没有找到此文件，请重新输入: ",
+        "no_found_app": "<@Red>没有找到 <@Magenta>{{ $app[1] }}<@Red>，这个应用可能不存在，也可能是拼写错误"
     },
     "clean_redundant_files": "运行一个后台作业：删除安装过程中产生的冗余文件\n",
-    "remove_app_lnk": "当前 Scoop 配置项 abgo_bucket_no_shortcut 的值为 true\n将运行一个后台任务监控安装程序是否创建桌面快捷方式，如果创建了将立即删除它\n如果需要桌面快捷方式，请运行以下命令:\nscoop config abgo_bucket_no_shortcut false\n",
-    "no_remove_app_lnk": "如果你不需要桌面快捷方式，请运行以下命令:\nscoop config abgo_bucket_no_shortcut true\n",
+    "remove_app_lnk": [
+        "<@Yellow>当前 Scoop 配置项 <@Magenta>abgo_bucket_no_shortcut<@Yellow> 的值为 <@Magenta>true<@Yellow>\n",
+        "将运行一个后台任务监控安装程序是否创建桌面快捷方式，如果创建了将立即删除它\n",
+        "如果需要桌面快捷方式，请运行以下命令:\n",
+        "<@Magenta>scoop config abgo_bucket_no_shortcut false\n"
+    ],
+    "no_remove_app_lnk": [
+        "<@Yellow>如果你不需要桌面快捷方式，请运行以下命令:\n",
+        "<@Magenta>scoop config abgo_bucket_no_shortcut true\n"
+    ],
     "remove": "移除 ",
-    "uninstalling": "正在运行软件自带的卸载程序..."
+    "uninstalling": "<@Cyan>正在运行软件自带的卸载程序..."
 }
