--- a/bin/lang/zh-CN.json
+++ b/bin/lang/zh-CN.json
@@ -1,8 +1,8 @@
 {
     "less": [
-        "<@Yellow>--------------------------------------------------\n",
-        "<@Cyan>按下 Enter 键查看更多，按下其他任意键退出！(剩余 <@Magenta>{{ $lines }}<@Cyan> 行)\n",
-        "<@Yellow>--------------------------------------------------<@Cyan>"
+        "<@Yellow>┌────────────────────────────────────────────────────────┐\n",
+        "<@Yellow>│<@Cyan>按下 <@Magenta>Enter<@Cyan> 键查看更多, 按下其他任意键退出！(剩余 <@Magenta>{{ $lines }} <@Cyan>行)<@Yellow>│\n",
+        "<@Yellow>└────────────────────────────────────────────────────────┘<@Cyan>"
     ],
     "persist_data": [
         "持久化数据(Persist Data)",
