feat(bin): update

--- a/bin/lang/en-US.json
+++ b/bin/lang/en-US.json
@@ -18,13 +18,15 @@
     ],
     "shortcut": [
         "<@Green>Creating shortcut for <@Magenta>{{ $app }}<@Green>.\n",
-        "Path: <@Blue>{{ $lnk_path }}<@Green>\n",
-        "If you don't need the desktop shortcut, run the following command:\n",
+        "Path: <@Blue>{{ $lnk_path }}<@Green>\n"
+    ],
+    "has_shortcut": [
+        "<@Yellow>If you don't need the desktop shortcut, run the following command:\n",
         "<@Magenta>scoop config abgo_bucket_no_shortcut true\n"
     ],
     "no_shortcut": [
         "<@Yellow>The current Scoop config <@Magenta>abgo_bucket_no_shortcut<@Yellow> has a value of <@Magenta>true<@Yellow>.\n",
-        "Desktop shortcuts are not created.\n",
+        "Desktop shortcuts are not created. If it exists, it will be deleted.\n",
         "If you need the desktop shortcut, run the following command:\n",
         "<@Magenta>scoop config abgo_bucket_no_shortcut false\n"
     ],
@@ -37,16 +39,6 @@
         "no_found_app": "<@Magenta>{{ $app[1] }}<@Red> was not found, it may not exist or may have spelling errors."
     },
     "clean_redundant_files": "Run a background job: Delete redundant files generated during the installation process.\n",
-    "remove_app_lnk": [
-        "<@Yellow>The current Scoop config <@Magenta>abgo_bucket_no_shortcut<@Yellow> has a value of <@Magenta>true<@Yellow>.\n",
-        "It will run a background task to monitor if the installer create a desktop shortcut, and if it does, will delete it immediately.\n",
-        "If you need the desktop shortcut, run the following command:\n",
-        "<@Magenta>scoop config abgo_bucket_no_shortcut false\n"
-    ],
-    "no_remove_app_lnk": [
-        "<@Yellow>If you don't need the desktop shortcut, run the following command:\n",
-        "<@Magenta>scoop config abgo_bucket_no_shortcut true\n"
-    ],
     "remove": "Removing ",
     "uninstalling": "<@Cyan>Running the built-in uninstaller of this app..."
 }
